--- a/package.json
+++ b/package.json
@@ -16,5 +16,28 @@
   "bugs": {
     "url": "https://github.com/robdcon/html5-template/issues"
   },
-  "homepage": "https://github.com/robdcon/html5-template#readme"
+  "homepage": "https://github.com/robdcon/html5-template#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-flow": "^7.8.3",
+    "eslint": "^6.8.0",
+    "gulp": "^4.0.2",
+    "jest": "^25.1.0",
+    "prettier": "1.19.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-watch": "^5.0.0"
+  },
+  "dependencies": {
+    "node-sass": "^4.13.1",
+    "browser-request": "^0.3.3",
+    "browserify": "^16.2.2",
+    "watch": "^1.0.2",
+    "watchify": "^3.9.0"
+  }
 }
