--- a/package.json
+++ b/package.json
@@ -35,9 +35,15 @@
     "prettier": "1.19.1"
   },
   "dependencies": {
-    "node-sass": "^4.13.1",
     "browser-request": "^0.3.3",
     "browserify": "^16.2.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-postcss": "^8.0.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "node-sass": "^4.13.1",
     "watch": "^1.0.2",
     "watchify": "^3.9.0"
   }
